# workidea

./: .gitignore  README.md  pyproject.toml
configs/: real_manifest.example.jsonl
configs/baselines/: dynamic_freq_window.json  fullkv.json  h2o.json  pyramid.json  snap.json  streamingcache.json  vlcache.json
docs/: dynamic_freq_window_v2.md
scripts/: build_mmbench_manifest_with_answers.py  download_real_models.py  extract_trace_hf.py  extract_trace_vlm_hf.py  judge_mmbench_video_official_style.py  run_mmbench_video_real_eval.py  run_offline_benchmark.py  run_paper_benchmark.py  run_real_experiment_4gpu.py  run_strategy_real_eval.py
src/kvbench/: __init__.py  registry.py  types.py
src/kvbench/eval/: __init__.py  cli.py  offline.py  trace.py
src/kvbench/strategies/: __init__.py  base.py  dynamic_freq_window.py  fullkv.py  h2o.py  pyramidkv.py  snapkv.py  streamingcache.py  utils.py  vlcache.py
