[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvbench"
version = "0.1.0"
description = "Model-agnostic KV cache baseline framework for long-video offline QA"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24"
]

[project.scripts]
kvbench-offline = "kvbench.eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
