[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvbench"
version = "0.1.0"
description = "Model-agnostic KV cache baseline framework for long-video offline QA"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
real = [
  "torch>=2.2",
  "transformers>=4.48",
  "accelerate>=0.33",
  "huggingface_hub>=0.24",
  "decord>=0.6.0",
]

[project.scripts]
kvbench-offline = "kvbench.eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
